2006-11-28  Brian Matherly  <brian@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: fix path for bsddb env in Windows.

2006-11-28  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/MediaManager.py (get_rel_path): Correctly work out
	the drive letter for the path.

2006-11-27  Alex Roitman  <shura@gramps-project.org>
	* src/DbLoader.py (DbLoader.save_as): Prohibit SaveAs into the
	currently opened database.
	(DbLoader.import_file): Prohibit importing from the currently
	opened database.
	* src/GrampsDb/_WriteXML.py (dump_person_ref): Properly export
	associations.
	* src/GrampsDb/_WriteGedcom.py (write_person): Typo.

2006-11-27  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Filters/Rules/Person/_HasCompleteRecord.py: Use new marker API
	* src/RelLib/_Person.py (get_complete_flag): Remove old unused API
	* src/RelLib/_Family.py (get/set_complete_flag): Remove old unused API
	
2006-11-27  Don Allingham  <don@gramps-project.org>
	* configure.in: change version number

2006-11-26  Don Allingham  <don@gramps-project.org>
	* 2.2.3 released
	* configure.in: up version number
	* src/GrampsCfg.py: window title
	* src/ColumnOrder.py: window title name
	* src/DisplayState.py: open recent menu copy
	* help/C/gramps.xml: typo fixes
	* po/POTFILES.in: remove unused files
	* src/Merge/_MergePerson.py:  fixed check_for_child function to handle childrefs
	* po/gramps.pot: updated

2006-11-26  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_WriteGedcom.py (write_person): Typo.
	* src/plugins/Check.py (check_for_broken_family_links): Check if
	child is one of the parents.
	* src/GrampsDb/_GrampsBSDDB.py (load): Clean env for a new grdb
	file; do not attempt recovery for a new grdb file.
	* NEWS: Typo.

2006-11-26  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditPlace.py: consistent menu and title names
	* src/Editors/_EditSource.py: consistent menu and title names
	* src/Editors/_EditPerson.py: consistent menu and title names